# aoc21

./: .gitignore  LICENCE  README.md  pyproject.toml
src/aoc21/: log.py  main.py  problem.py  runner.py  solution.py
src/aoc21/days/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py
tests/: test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day11.py  test_day12.py
