[tool.poetry]
name = "aoc21"
version = "0.1.0"
description = "Run Advent of Code 2021 solutions."
authors = ["macph <macph@users.noreply.github.com>"]

[tool.poetry.scripts]
aoc21 = "aoc21.main:main"

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.8.9"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
